src/components/Expertise/Expertise.module.css
.sectionContainer {
    position: fixed;
    top: 0;
    width: 50vw;
    height: 100vh;
    pointer-events: none;
    transition: opacity 1.2s ease-in-out;
    scroll-snap-align: start;
}
.section {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}
.textContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 60px 20px;
    color: white;
    background-color: rgba(0, 0, 0, 0.4);
}
.skillsContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
}
.skillsContainer h2 {
    font-size: 1.5em;
    font-weight: 200;
}
.title {
    border-bottom: 1px solid white;
    font-size: 3em;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 5px;
    margin: 0;
    padding: 10px;
}
.skill {
    pointer-events: all;
    color: rgba(255, 255, 255, 0.8);
    transition: color 0.2s ease-in-out;
}
.skill:hover {
    color: rgba(255, 255, 255, 1);
}

@media (max-height: 600px) {
    .title {
        font-size: 2em;
    }
    .skillsContainer {
        gap: 5px;
    }
    .skillsContainer h2 {
        font-size: 1.2em;
    }
}
@media (max-width: 768px) {
    .sectionContainer {
        width: 100vw;
    }
    .title {
        font-size: 2.2em;
        text-align: center;
    }
}

